force-app/main/default/objects/Banner_Ads__c/Banner_Ads__c.object-meta.xml
<CustomObject>
    <description>Custom object built ot allow the dynamic display of marketing banner ads on segment landing pages</description>
    <label>Banner Ads</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Banner Ads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>