force-app/main/default/objects/Banner_Ads__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Banner Ads</relationshipLabel>
    <relationshipName>Banner_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>