force-app/main/default/objects/Banner_Ads__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>