force-app/main/default/objects/Banner_Ads__c/fields/Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop Date</label>
    <type>Date</type>
</CustomField>